+ igraci vide samo svoju prisutnost na pojedinom treningu

--- a/app/src/main/res/layout/item_player_attendance.xml
+++ b/app/src/main/res/layout/item_player_attendance.xml
@@ -29,7 +29,8 @@
         <CheckBox
             android:id="@+id/cbPresent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:buttonTint="#2563EB"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
